# mcp-mail-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
charts/email-mcp/: .helmignore  Chart.yaml  values.yaml
charts/email-mcp/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: api.md  architecture.md  configuration.md  development.md  getting-started.md  helm-values.md  helm.md  operations.md
docs/examples/: curl.md  python-client.md
src/email_mcp/: __init__.py  __main__.py  server.py
src/email_mcp/config/: __init__.py  constants.py  errors.py  logging.py  models.py  parsing.py  settings.py
src/email_mcp/email/: __init__.py  attachments.py  delivery.py  domain_policy.py  errors.py  message.py  models.py  recipients.py
src/email_mcp/mcp/: auth.py  client_logging.py  context.py  delivery.py  message_building.py  server.py  workflow.py
src/email_mcp/observability/: __init__.py  metrics.py
tests/: test_auth.py  test_config.py  test_container_hardening.py  test_docstrings.py  test_domain_allowlist.py  test_emailer.py  test_helm_chart.py  test_metrics.py  test_server.py
