[project]
name = "email-mcp"
version = "0.1.0"
description = "FastMCP email server with SMTP, MailDev, progress, logging, and recipient domain filtering."
readme = "README.md"
authors = [
    { name = "Thomas ILLIET", email = "contact@thomas-illiet.fr" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3.1",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
]

[project.scripts]
email-mcp = "email_mcp:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "ty>=0.0.38",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=email_mcp --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D",
    "ISC001",
    "PLR0913",
    "TC001",
    "TC003",
    "TRY003",
    "TRY300",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101", "SLF001"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"
